2A/05_Projet_GL/src/test/deca/context/invalid/sans_objet/25_leq_bool_bool.deca
// Description :
//      opération <= entre deux booleans 
// Resultats :
//    Erreur Contexteulle : ligne 10 : :l'opération <= n'est pas possible entre 'boolean' et 'boolean'
//
// Historique :
// cree le 10/01/2024

{
    true <= true ;
}